fixed spacing

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -80,7 +80,7 @@
     flex-direction: column;
     align-items: center;
     transition: 1s ease;
-    padding-top: 240px;
+    padding-top: 80px;
 
     div {
       margin: 20px 0;
